yaml/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: myapp
  labels:
    app.kubernetes.io/instance: myapp
    app.kubernetes.io/name: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: myapp
      app.kubernetes.io/name: myapp
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: myapp
        app.kubernetes.io/name: myapp
    spec:
      containers:
        - resources: {}
          name: myapp
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          
          imagePullPolicy: Always
          image: 'quay.io/leandrop02/ex288-chart:1.0'
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
