yaml/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: exam-chart
  namespace: mychart
  labels:
    app.kubernetes.io/instance: exam-chart
    app.kubernetes.io/name: exam-chart
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/instance: exam-chart
    app.kubernetes.io/name: exam-chart
